<resources>
    <string name="app_name" translatable="false">Emergency</string>
    <string name="emergeny_call_sent">Emergeny Call sent</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps_own_position">Map</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="specifiedContacts">Specified Contacts:</string>
    <string name="title_activity_user_data">User Data</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="gender">Gender</string>
    <string name="specified_Contacts">Specified Contacts</string>
    <string name="no_user_specified">No user specified</string>
    <string name="must_allow_permissions">You must allow all permissions in order to use this application!</string>
    <string name="emergency_sms_sent">Emergency-SMS is sent</string>
    <string name="emergency_call">Emergency call</string>
    <string name="cancel_call_question">Cancel the emergency call?</string>
    <string name="yes">Yes</string>
    <string name="call_canceled">Emergency call canceled</string>
    <string name="no">No</string>
    <string name="contacts">Contacts</string>
    <string name="user">User</string>
    <string name="gps_required">GPS is required to use this application</string>
    <string name="please_enable_gps">Please enable GPS in the settings menu</string>
    <string name="enable_gps">Enable GPS</string>
    <string name="cancel">Cancel</string>
    <string name="unable_detect_location">Unable to detect location</string>
    <string name="emergency_capital">EMERGENCY</string>
    <string name="need_help_capital">NEED HELP</string>
    <string name="position" translatable="false">Pos.:</string>
    <string name="diseases">Diseases</string>
    <string name="special_needs">Special needs</string>
    <string name="medication">Medication:</string>
    <string name="bloodtype">Bloodtype</string>
    <string name="times_per_day">x per day</string>
    <string name="first_contact_label">1st Contact (will also be called)</string>
    <string name="second_contact">2nd Contact</string>
    <string name="third_contact">3rd Contact</string>
    <string name="name" translatable="false">Name</string>
    <string name="dosis" translatable="false">Dosis</string>
    <string name="add_a_medication">Add medication</string>
    <string name="add">Add</string>
    <string name="clear_all">Clear all</string>
    <string name="no_item_specified">No item specified</string>
    <string name="no_special_need_specified">No special need specified</string>
    <string name="no_medication_specified">No medication specified</string>
    <string name="no_disease_specified">No disease specified</string>
    <string name="user_data">User Data</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="amount_per_day">Amount per day</string>
    <string name="disease">Disease</string>
    <string name="add_disease">Add disease</string>
    <string name="add_special_need">Add special need</string>
</resources>
